Merge pull request #499
* refactor: 방어적 복사 ArrayList -> List로 변경

* refactor: Yield 생성자 parameter Long -> long

* refactor: LottoNumberGenerator interface화

* refactor: LottoGame 가지는 필드 멤버 Lotto, LottoNumber -> Lottos 변경

* refactor: LottoGame이 LottoMoney를 멤버로 가지도록 변경

* refactor: Lottos getter가 unmodifiableList 반환하도록 변경

* refactor: LottoGame이 int를 받아 LottoMoney를 생성하도록 변경

* refactor: numbergenerator 모듈 분리

* refactor: THIRD, SECOND 필터 메소드 분리

* refactor: Lottos가 LottoNumberGenerator를 주입받도록 변경

* refactor: WinningNumbers, BonusNumber 검증 LottoResult로 이동

* refactor: calculateYield 생성 LottoResult로 이동

* refactor: match 역할 Rank -> Lotto로 분산

* refactor: 수동 로또 구매수 입력 기능 추가

* refactor: 수동 로또 입력받아 출력 기능 추가

* refactor: AutoLottos가 Lottos를 포함하도록 변경

* refactor: AutoLottos가 Lottos를 포함하도록 변경

* Merge remote-tracking branch 'origin/step2' into step2

* refactor: AutoLottos가 Lottos를 상속하도록 변경

* refactor: 총 상금 계산 책임 Yield로 이동

* refactor: LottoMoney 저장을 int -> long으로 변경

* refactor: 받은 수동 번호를 정렬해서 전달하도록 변경

* refactor: 방어적 복사 copyOf 쓰도록 변경

* refactor: Lotto toString 정의

* refactor: ManualGenerator 정렬시 원본 리스트에 변경이 없도록 수정

* feat: 수동 구매 개수가 0이하일 경우 빈 리스트를 반환 기능 추가

* refactor: 접근 제어자, 메소드 정렬 순서 변경

* test: ManualGeneratorTest 추가

* refactor: 모두 수동인 경우 위해 빈 컬렉션 허용, AutoLottos -> Lottos 통합

* refactor: 모두 수동인 경우 위해 빈 컬렉션 허용, AutoLottos -> Lottos 통합

* Merge remote-tracking branch 'origin/step2' into step2

* refactor: gererateLottos 접근 제어자 default -> private

* test: 수동 구매, 자동 구매 검증 테스트 추가

* test: 볼 번호 동등성 비교 테스트 추가

* feat: InputView에서 0 미만의 입력 검증 기능 추가

* refactor: ShuffleGenerator unmofidiableList -> List.copyOf

* refactor: Lotto 자료형 List -> Set 변경으로 중복 제어

* refactor: Lotto 생성 역할 LottoFactory으로 변경

* refactor: lottofactory 모듈화, 접근 제어자 변경

* refactor: lottofactory 모듈화, 접근 제어자 변경

* Merge remote-tracking branch 'origin/step2' into step2

* refactor: Lotto 자료구조 TreeSet으로 변경

* refactor: generateLottos CopyOf 제거

* refactor: LottoGame이 manualLottos를 가지도록 변경

* refactor: LottoG